<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/full_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:text="@string/email_address"
        app:layout_constraintEnd_toEndOf="@+id/etFullName"
        app:layout_constraintStart_toStartOf="@+id/etFullName"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/etUniversityOrOrganization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/university_organization"
        app:layout_constraintEnd_toEndOf="@+id/etEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/etEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/etUniversityOrOrganization"
        app:layout_constraintStart_toStartOf="@+id/etUniversityOrOrganization"
        app:layout_constraintTop_toBottomOf="@+id/etUniversityOrOrganization"
        android:inputType="textPassword"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:inputType="textPassword"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />
</android.support.constraint.ConstraintLayout>